# umbranet

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  MEMORY_REFLECTION_VALIDATION_REPORT.md  README.md  docker-compose.yml  docker-minimal-requirements.txt  init-db.sql  pyproject.toml  start-dev.sh
.github/workflows/: build_deploy.yml  quality_gate.yml
.github/workflows.disabled/: build_deploy.yml  quality_gate.yml
docker/: Reflector.Dockerfile
docs/: Architectural Blueprint_ The _Headless_ Governor System.md  Code Migration Guide - Memory Processors.md  Development plan.md  Implementation Guide - Memory Reflector Service.md  Implementation Roadmap - Step by Step.md  Memory Reflection Refactor Plan.md  Phase 1 Implementation Plan.md  Phase 2 Implementation Plan.md  correction plan.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx
scripts/: ci-test.sh
src/: main.py
src/action_plane/: __init__.py
src/core/: config.py
src/memory/: __init__.py  base.py  manager.py
src/reflector/: __init__.py  main.py
tests/e2e/: __init__.py  run_all_tests.py  test_full_pipeline.py  test_monitoring.py  test_stress.py
tests/integration/: test_episodic_memory.py  test_procedural_memory.py  test_semantic_memory.py  test_short_term_memory.py  test_webhook_e2e.py
tests/unit/: test_config.py  test_context_manager.py  test_domain_events.py  test_domain_state.py  test_domain_tools.py  test_example_tools.py  test_governor_workflow.py  test_main.py  test_policy_engine.py  test_tool_registry.py  test_webhook_interface.py  test_workflow_base.py  (+1 more)
(+71 files in other folders)
