[tool.poetry]
name = "headless-governor"
version = "1.0.1"
description = "The Headless Governor System - A stateful Personal AI Assistant Operating System"
authors = ["Governor Team"]
readme = "README.md"
packages = [{include = "src"}]
# package-mode = false  # Not supported in Poetry 1.7.1

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
redis = "^5.0.0"
# Core logic dependencies
langchain = "^0.1.0"
langgraph = "^0.0.10"
tiktoken = "^0.6.0"
# Database dependencies
asyncpg = "^0.29.0"
pgvector = "^0.2.0"
neo4j = "^5.14.0"
# Embedding providers
openai = "^1.10.0"
sentence-transformers = "^2.2.0"
# HTTP client with retry support
tenacity = "^8.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
httpx = "^0.26.0"
safety = "^3.0.0"
bandit = "^1.7.5"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]  # pycodestyle, pyflakes, isort, bugbear, pyupgrade

[tool.mypy]
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "asyncio: mark test as async",
]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--disable-warnings"
]